# vaxtalk

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
notebooks/: agent_prototype.ipynb  agent_tests.ipynb  aggregator_prototype.ipynb  rag_prototype.ipynb  system_prototype.ipynb  test.ipynb
prototypes/notebooks/: system_prototype.ipynb
prototypes/sentiment_tracker/: emotion_prototypes_embeddings.json  sentiment_tool_test.ipynb  sentiment_tracker.py  sentiment_tracker_usage.ipynb
sentiment_tracker/: emotion_prototypes_embeddings.json  sentiment_tracker_usage.ipynb
src/: VaxTalkAssistant.py  __init__.py  agent.py  load_corpus_and_data.py
src/config/: __init__.py  config.py  logging_config.py
src/model/: __init__.py  document_chunk.py  sentiment_output.py
src/rag/: embedding_handler.py  pdf_handler.py  rag.py  web_handler.py
vaxtalk/: __init__.py  agent.py  load_corpus_and_data.py  prompts.py
vaxtalk/config/: __init__.py  config.py  logging_config.py
vaxtalk/connectors/: llm_connection_factory.py
vaxtalk/model/: __init__.py  rag_output.py  sentiment_output.py
vaxtalk/patches/: parallel_agent_patch.py
vaxtalk/rag/: embedding_handler.py  pdf_handler.py  rag.py  rag_service.py  web_handler.py
vaxtalk/sentiment/: __init__.py  sentiment_phrases.json  sentiment_service.py
vaxtalk/tools/: __init__.py  rag_tool.py  safety_tool.py  sentiment_tool.py  validation_tool.py
