[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaxtalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.19.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.0",
    "nbstripout>=0.7.1",
    "pre-commit>=3.6.0",
]
