[project]
name = "vaxtalk"
version = "0.1.0"
description = "VaxTalkAssistant: An AI-powered assistant for vaccine information and support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-adk>=1.19.0",
    "google-genai>=1.52.0",
    "litellm>=1.80.5",
    "numpy>=2.3.5",
    "pip>=25.3",
    "protobuf>=6.33.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]

[project.scripts]
vaxtalk = "vaxtalk.agent:main"
load-corpus = "vaxtalk.load_corpus_and_data:main"

[tool.hatch.build.targets.wheel]
packages = ["vaxtalk"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.0",
    "nbstripout>=0.7.1",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
